fixed factbookle container for mobile; wraparound stats display

--- a/css/styles.css
+++ b/css/styles.css
@@ -817,7 +817,7 @@ button {
 .landing-container {
   max-width: 900px;
   margin: 40px auto;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   text-align: center;
 }
 
